--- a/src/static/style.css
+++ b/src/static/style.css
@@ -7,7 +7,7 @@
 /*=========================================== 
  * Importing CSS Libraries
  *===========================================*/
- @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,700&display=swap';
+ @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,700&display=swap');
 article,
 aside,
 details,
